build: add debug symbols in release mode

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,5 @@ jobs:
         with:
           name: leviscript-${{ matrix.backend }}-windows-x64-${{ github.sha }}
           path: |
-            build/windows/x64/release/
+            build/windows/x64/release/leviscript-${{ matrix.backend }}.dll
+            build/windows/x64/release/leviscript-${{ matrix.backend }}.pdb
